--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 body {
+    color: #ffffff;
     background-image: url("images/universe.jpg");
     background-size: cover;
+    text-align: center;
 }  
 
+.btn {
+    padding: 6px 12px;
+    background: #ffffff;
+    border: none;
+
+}
 
