--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,13 @@ body {
     background-image: url("images/universe.jpg");
     background-size: cover;
     text-align: center;
+    font-family: 'Orbitron', sans-serif;
 }  
 
 .btn {
     padding: 6px 12px;
     background: #ffffff;
     border: none;
-
+    font-family: inherit;
 }
 
