--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@ body {
     font-family: 'Orbitron', sans-serif;
 }  
 
+#main-logo {
+    width: 150px;
+}
+
+
 .btn {
     padding: 6px 12px;
     background: #ffffff;
