--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     color: #ffffff;
-    background-image: url("images/universe.jpg");
+    background-image: url("images/galaxy.webp");
     background-size: cover;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
