--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body {
-    color: #ffffff;
-    background-image: url("images/galaxy.webp");
-    background-size: cover;
+    margin: 0;
+    color: #82a5ca;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
-}  
+} 
+
+#hero {
+    background-image: url("images/galaxy.webp");
+    background-size: cover;
+    padding: 10px 0 40px 0;
+}
 
 #main-logo {
     width: 150px;
